<resources>
    <string name="app_name">Mr Milk</string>
    <string name="title_activity_home">home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_Subscriptions">My Subscriptions</string>
    <string name="my_orders">My Orders</string>
    <string name="wallet_name">Mr. Milk Wallet</string>
    <string name="help_and_support">Help and Support</string>
    <string name="logout">Log out</string>
    <string name="cart_amount">Rs 22.00</string>
</resources>
